Attempt to fix visible line below waves

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,7 @@
   width: 100%;
   height: 120px;
   position: absolute;
-  bottom: -0.5px;
+  bottom: -50px;
   left: 0;
   background-size: auto;
   background-repeat: repeat no-repeat;
